<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.Create_Acc">

        <ImageButton
            android:id="@+id/profilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="39dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:scaleType="centerCrop"
            android:src="@mipmap/avatar" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/profilePic"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="9dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/createAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>